--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-html, body, #root{
+html,
+body,
+#root {
   height: 100%;
+}
+
+.speedCheckCardStyle {
+  flex: 1;
+  margin: 5px;
+}
+
+.badge {
+  background-color: lightblue !important;
+  color: white !important;
 }
