Context yapıları oluşturuldu.

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html,
 body,
-#root {
+#root,
+.app-layout {
   height: 100%;
 }
 
@@ -16,4 +17,16 @@ body,
 
 .nav-link {
   font-weight: 500;
+}
+
+.bg-dark hr {
+  border-color: #ff5722;
+}
+
+.bg-light hr {
+  border-color: black;
+}
+
+.bg-open-gray {
+  background-color: #303030 !important;
 }
