--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,17 @@ body,
 .bg-open-gray {
   background-color: #303030 !important;
 }
+
+.score-card-container {
+  display: flex; 
+  justify-content: space-between; 
+  align-items: stretch; 
+  flex-wrap: wrap; 
+}
+
+.card {
+  margin: 10px;
+  flex: 1;
+  min-width: 200px; 
+}
+
